[gd_scene load_steps=3 format=2]

[ext_resource path="res://Control.gd" type="Script" id=1]
[ext_resource path="res://testDiag/PopupDialog.tscn" type="PackedScene" id=2]


[node name="Node2D" type="Node2D"]

[node name="Control" type="Control" parent="."]
margin_right = 500.0
margin_bottom = 300.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TabContainer" type="TabContainer" parent="Control"]
anchor_right = 0.85
anchor_bottom = 0.963
margin_left = -1.0
margin_top = -1.0
margin_bottom = 0.0999756
tab_align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options" type="VBoxContainer" parent="Control/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="HSlider" type="HSlider" parent="Control/TabContainer/Options"]
margin_right = 418.0
margin_bottom = 16.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="Control/TabContainer/Options"]
margin_top = 20.0
margin_right = 418.0
margin_bottom = 44.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Params" type="VBoxContainer" parent="Control/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="VBoxContainer" type="VBoxContainer" parent="Control/TabContainer/Params"]
margin_right = 418.0
margin_bottom = 76.0

[node name="Ligne_lib1" type="HBoxContainer" parent="Control/TabContainer/Params/VBoxContainer"]
margin_right = 418.0
margin_bottom = 24.0

[node name="Label" type="Label" parent="Control/TabContainer/Params/VBoxContainer/Ligne_lib1"]
margin_top = 5.0
margin_right = 55.0
margin_bottom = 19.0
text = "Libelle 1"
valign = 1

[node name="Saisie" type="LineEdit" parent="Control/TabContainer/Params/VBoxContainer/Ligne_lib1"]
margin_left = 59.0
margin_right = 117.0
margin_bottom = 24.0
text = "saisie 1"

[node name="Ligne_lib2" type="HBoxContainer" parent="Control/TabContainer/Params/VBoxContainer"]
margin_top = 28.0
margin_right = 418.0
margin_bottom = 52.0

[node name="Label" type="Label" parent="Control/TabContainer/Params/VBoxContainer/Ligne_lib2"]
margin_top = 5.0
margin_right = 55.0
margin_bottom = 19.0
text = "Libelle 2"
valign = 1

[node name="Saisie" type="LineEdit" parent="Control/TabContainer/Params/VBoxContainer/Ligne_lib2"]
margin_left = 59.0
margin_right = 117.0
margin_bottom = 24.0
text = "saisie 2"

[node name="Ligne_bouton" type="HBoxContainer" parent="Control/TabContainer/Params/VBoxContainer"]
margin_top = 56.0
margin_right = 418.0
margin_bottom = 76.0
alignment = 2

[node name="Valider" type="Button" parent="Control/TabContainer/Params/VBoxContainer/Ligne_bouton"]
margin_left = 296.0
margin_right = 352.0
margin_bottom = 20.0
text = "Valider"

[node name="Annuler" type="Button" parent="Control/TabContainer/Params/VBoxContainer/Ligne_bouton"]
margin_left = 356.0
margin_right = 418.0
margin_bottom = 20.0
text = "Annuler"

[node name="PopupDialog" parent="Control" instance=ExtResource( 2 )]
margin_left = 74.0
margin_top = 128.1
margin_right = 454.0
margin_bottom = 298.1
[connection signal="value_changed" from="Control/TabContainer/Options/HSlider" to="Control" method="_on_HSlider_value_changed"]
[connection signal="pressed" from="Control/TabContainer/Params/VBoxContainer/Ligne_bouton/Valider" to="Control" method="_on_Valider_pressed"]
